Prevent layout shift from wifi and bluetooth icons

--- a/src/components/library-item/library-item.css
+++ b/src/components/library-item/library-item.css
@@ -185,8 +185,10 @@
     font-weight: bold;
 }
 
-.featured-extension-metadata-detail img{
+.featured-extension-metadata-detail img {
     margin-right: 0.25rem;
+    width: 20px;
+    height: 20px;
 }
 
 .credits-outer {
